@@ -1,1 +1,97 @@
+COMMON_FLOAT = \
+  _atof.c \
+  _schar2fs.c \
+  _sint2fs.c \
+  _slong2fs.c \
+  _uchar2fs.c \
+  _uint2fs.c \
+  _ulong2fs.c \
+  _fs2schar.c \
+  _fs2sint.c \
+  _fs2slong.c \
+  _fs2uchar.c \
+  _fs2uint.c \
+  _fs2ulong.c \
+  _fsadd.c \
+  _fsdiv.c \
+  _fsmul.c \
+  _fssub.c \
+  _fseq.c \
+  _fsgt.c \
+  _fslt.c \
+  _fsneq.c \
+  fabsf.c \
+  frexpf.c \
+  ldexpf.c \
+  expf.c \
+  powf.c \
+  sincosf.c \
+  sinf.c \
+  cosf.c \
+  logf.c \
+  log10f.c \
+  sqrtf.c \
+  tancotf.c \
+  tanf.c \
+  cotf.c \
+  asincosf.c \
+  asinf.c \
+  acosf.c \
+  atanf.c \
+  atan2f.c \
+  sincoshf.c \
+  sinhf.c \
+  coshf.c \
+  tanhf.c \
+  floorf.c \
+  ceilf.c \
+  modff.c \
+  errno.c
+
+COMMON_LONG = \
+  _divslong.c \
+  _modslong.c \
+  _modulong.c
+
+COMMON_SDCC = \
+  _atoi.c \
+  _atol.c \
+  abs.c \
+  labs.c \
+  rand.c \
+  _iscntrl.c \
+  _isdigit.c \
+  _isgraph.c \
+  _isprint.c \
+  _ispunct.c \
+  _isspace.c \
+  _islower.c \
+  _isupper.c \
+  _isxdigit.c \
+  _strcat.c \
+  _strchr.c \
+  _strcmp.c \
+  _strcpy.c \
+  _strcspn.c \
+  _strncat.c \
+  _strncmp.c \
+  _strncpy.c \
+  _strpbrk.c \
+  _strrchr.c \
+  _strspn.c \
+  _strstr.c \
+  _strtok.c \
+  _memcmp.c \
+  _memcpy.c \
+  _memset.c \
+  _calloc.c \
+  _malloc.c \
+  _realloc.c \
+  _free.c \
+  printf_large.c \
+  puts.c \
+  gets.c \
+  assert.c \
+  time.c
+
 MODELS = small medium large
